tests/ui/partialeq_ne_impl.stderr
error: re-implementing `PartialEq::ne` is unnecessary
  --> $DIR/partialeq_ne_impl.rs:11:5
   |
11 |     fn ne(&self, _: &Foo) -> bool { false }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(partialeq_ne_impl)] implied by #[deny(warnings)]
note: lint level defined here
  --> $DIR/partialeq_ne_impl.rs:4:9
   |
4  | #![deny(warnings)]
   |         ^^^^^^^^

error: aborting due to previous error

